src/test/ui/issue-46471-1.stderr
error[E0597]: `z` does not live long enough (Ast)
  --> $DIR/issue-46471-1.rs:16:14
   |
LL |         &mut z
   |              ^ borrowed value does not live long enough
LL |     };
   |     - `z` dropped here while still borrowed
...
LL | }
   | - borrowed value needs to live until here

error[E0597]: `z` does not live long enough (Mir)
  --> $DIR/issue-46471-1.rs:16:9
   |
LL |         &mut z
   |         ^^^^^^ borrowed value does not live long enough
LL |     };
   |     - `z` dropped here while still borrowed
...
LL | }
   | - borrowed value needs to live until here

error: aborting due to 2 previous errors

If you want more information on this error, try using "rustc --explain E0597"
